--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-*, *:before, *:after {
+*,
+*:before,
+*:after {
     box-sizing: border-box;
     min-width: 0;
     min-height: 0;
@@ -7,7 +9,7 @@
 }
 
 body {
-    overflow-y:hidden;
+    overflow-y: hidden;
     margin: 0;
     width: 100%;
     font-family: "Rokkitt", serif;
@@ -69,7 +71,7 @@ body {
 
 h2 {
     margin-top: 0.2em;
-    font-family: "Buenard",serif;
+    font-family: "Buenard", serif;
     font-weight: 700;
     font-size: 3em;
     line-height: 1.2;
@@ -99,15 +101,18 @@ a {
     -webkit-animation-timing-function: ease-out;
 }
 
-main > section:nth-child(1):not(.site-menu), main > article:nth-child(1):not(.site-menu) {
+main>section:nth-child(1):not(.site-menu),
+main>article:nth-child(1):not(.site-menu) {
     z-index: 2;
 }
 
-main > section:nth-child(2):not(.site-menu), main > article:nth-child(2):not(.site-menu) {
+main>section:nth-child(2):not(.site-menu),
+main>article:nth-child(2):not(.site-menu) {
     z-index: 3;
 }
 
-main > section:nth-child(3):not(.site-menu), main > article:nth-child(3):not(.site-menu) {
+main>section:nth-child(3):not(.site-menu),
+main>article:nth-child(3):not(.site-menu) {
     z-index: 4;
 }
 
@@ -171,6 +176,7 @@ main > section:nth-child(3):not(.site-menu), main > article:nth-child(3):not(.si
     0% {
         opacity: 0;
     }
+
     100% {
         opacity: 1;
     }
@@ -180,6 +186,7 @@ main > section:nth-child(3):not(.site-menu), main > article:nth-child(3):not(.si
     0% {
         opacity: 0;
     }
+
     100% {
         opacity: 1;
     }
@@ -189,6 +196,7 @@ main > section:nth-child(3):not(.site-menu), main > article:nth-child(3):not(.si
     0% {
         width: 0;
     }
+
     100% {
         width: 100%;
     }
@@ -198,6 +206,7 @@ main > section:nth-child(3):not(.site-menu), main > article:nth-child(3):not(.si
     0% {
         width: 0;
     }
+
     100% {
         width: 100%;
     }
@@ -207,6 +216,7 @@ main > section:nth-child(3):not(.site-menu), main > article:nth-child(3):not(.si
     0% {
         height: 0;
     }
+
     100% {
         height: 100%;
     }
@@ -216,19 +226,34 @@ main > section:nth-child(3):not(.site-menu), main > article:nth-child(3):not(.si
     0% {
         height: 0;
     }
+
     100% {
         height: 100%;
     }
 }
 
 @keyframes move {
-    0%, 100% {margin-top: 0}
-    50% {margin-top: 3vh}
+
+    0%,
+    100% {
+        margin-top: 0
+    }
+
+    50% {
+        margin-top: 3vh
+    }
 }
 
 @-webkit-keyframes move {
-    0%, 100% {margin-top: 0}
-    50% {margin-top: 3vh}
+
+    0%,
+    100% {
+        margin-top: 0
+    }
+
+    50% {
+        margin-top: 3vh
+    }
 }
 
 @media only screen and (min-width: 768px) {
@@ -297,11 +322,3 @@ main > section:nth-child(3):not(.site-menu), main > article:nth-child(3):not(.si
     }
 
 }
-
-
-
-
-
-
-
-
