--- a/scss/style.scss
+++ b/scss/style.scss
@@ -84,7 +84,7 @@ h2{
   line-height: 1.2;
   //font-size: 9vmin;
   @media (min-width: 32em){
-    font-size: 4em;
+    font-size: 5.2em;
   }
 }
 
@@ -148,12 +148,32 @@ main > section, main > article{
   }
   
   &__pretitle{
-    margin-bottom: 0.5em;
+    width: 100vw;
+    padding-left: 20%;
+    padding-right: 20%;
+    margin-left: 12%;
+    margin-bottom: 1em;
     font-size: 1em;
     font-weight: 400;
     text-transform: uppercase;
     letter-spacing: 0.15em;
+    display: table-cell;
+    vertical-align: bottom;
+    text-align: center;
   }
+}
+
+a {
+  color: white;
+}
+
+.arrow {
+  border: none;
+  font-size: 4em;
+  animation: scale 2s infinite;
+  animation-timing-function: ease-out;
+  -webkit-animation: scale 2s infinite;
+  -webkit-animation-timing-function: ease-out;
 }
 
 //----------------------------------------------
@@ -182,11 +202,100 @@ main > section, main > article{
 //----------------------------------------------
 //  animation: animate border height
 //----------------------------------------------
-@keyframes ani-height {  
+@keyframes ani-height {
   0% {
     height: 0;
   }
   100% {
     height: 100%;
+  }
+}
+
+@keyframes scale {
+
+  0%,
+  100% {
+    transform: scale(1.2);
+  }
+
+  50% {
+    transform: scale(1);
+  }
+}
+
+@-webkit-keyframes scale {
+
+  0%,
+  100% {
+    transform: scale(1.2);
+  }
+  50% {
+    transform: scale(1);
+  }
+}
+
+@media only screen and (min-width: 769px) {
+
+  .first {
+    margin-top: calc(-50vh + 8vw);
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 100px;
+    display: block;
+    z-index: 5;
+    width: calc(200px + 0.5vw);
+    outline: .75em solid white;
+  }
+
+  .second {
+    margin-top: calc(-50vh + 8vw);
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 100px;
+    display: inline;
+    float: none;
+    text-align: center;
+    display: block;
+    z-index: 5;
+    width: 84%;
+  }
+
+  .second img {
+    margin-left: 3%;
+    margin-right: 3%;
+    outline: .75em solid white;
+    height: calc(180px + 0.5vw);
+    width: calc(180px + 0.5vw);
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .first {
+    margin-top: calc(-50vh + 8vw);
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 100px;
+    display: block;
+    z-index: 5;
+    height: calc(200px + 5vw);
+    outline: .75em solid white;
+  }
+
+  .second {
+    margin-top: calc(-50vh + 8vw);
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 100px;
+    float: none;
+    text-align: center;
+    display: block;
+    z-index: 5;
+    width: calc(160px + 30vw);
+  }
+
+  .second img {
+    margin: 5%;
+    outline: .75em solid white;
+    height: calc(70px + 5vw);
   }
 }
